# Joints.AI

./: .env.example  .env.local.example  .gitignore  DEPLOYMENT.md  README.md  memory.md  middleware.ts  next.config.mjs  package-lock.json  package.json  render.yaml  tailwind.config.ts  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/(dashboard)/: layout.tsx  page.tsx
app/assess/: layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  errors.py  logging.py  main.py  middleware.py  orchestrator.py
backend/app/agents/: __init__.py  conversational.py  extractor.py  free_text.py  retriever.py  triage.py
backend/app/api/: conversational.py  free_text.py  intake.py  progress.py
backend/app/db/: __init__.py  store.py
backend/app/knowledge_base/: __init__.py  seed.py  vector_store.py
backend/app/llm/: __init__.py  client.py  vlm.py
backend/app/schemas/: __init__.py  agents.py  body.py  intake.py  red_flags.py
backend/techphysio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_triage.py
components/auth/: login-form.tsx  signup-form.tsx
components/exercises/: ExerciseCard.tsx  ExercisePlayer.tsx  PlanViewer.tsx  ProgressTracker.tsx
components/illustrations/: AnimatedJointDot.tsx  BodySilhouette.tsx  DotGridBackground.tsx  JointHip.tsx  JointKnee.tsx  JointShoulder.tsx  JointSpine.tsx  WaveBackground.tsx
components/intake/: BodyMap.tsx  ConsentCheckbox.tsx  FileUpload.tsx  IntensitySlider.tsx  (+7 more)
store/: authStore.ts
(+87 files in other folders)
